# jina-reader-mcp

./: README.md  pyproject.toml
src/jina_reader_mcp/: server.py
